add ping controller

--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
+  "editor.trimAutoWhitespace": true,
+  "editor.formatOnSave": true,
   "files.exclude": {
     "**/.DS_Store": true,
     "**/.git": true,
