--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/
+
+# testing
+/coverage
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 # production
 /logs
@@ -6,4 +14,15 @@
 
 # misc
 .DS_Store
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
