--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,13 +1,17 @@
 {
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
+  "editor.trimAutoWhitespace": true,
+  "editor.formatOnSave": true,
   "files.exclude": {
     "**/.DS_Store": true,
     "**/.git": true,
     "**/.hg": true,
     "**/.svn": true,
+    "**/*.css": true,
     "**/CVS": true,
-    "dist": true,
+    "build": true,
+    "*.js": true,
     "**/node_modules": true,
     "package-lock.json": true,
     "tsconfig.tsbuildinfo": true
