--- a/openapi/.gitignore
+++ b/openapi/.gitignore
@@ -1,10 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-*.tsbuildinfo
+# See https://help.github.com/articles/ignoring-files/
 
 # testing
 /coverage
@@ -14,18 +8,8 @@
 /index.ts
 /schemas.d.ts
 /routes
+*.tsbuildinfo
 
 # misc
 .DS_Store
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
