--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -1,13 +1,13 @@
 {
-  // See https://go.microsoft.com/fwlink/?LinkId=733558
-  // for the documentation about the tasks.json format
   "version": "2.0.0",
   "tasks": [
     {
       "label": "Build",
       "type": "shell",
-      "command": "./build.sh",
-      "isBackground": true,
+      "command": "yarn build:server",
+      "options": {
+        "cwd": ".."
+      },
       "group": {
         "kind": "build",
         "isDefault": true
@@ -17,7 +17,7 @@
         "reveal": "silent",
         "clear": true
       },
-      "problemMatcher": "$tsc-watch"
+      "problemMatcher": "$tsc"
     },
     {
       "label": "Run",
