--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/klaw": "^3.0.1",
     "@types/ms": "^0.7.31",
     "@types/node": "^13.13.2",
+    "@types/react": "^16.9.34",
     "@types/superagent": "^4.1.7",
     "ejs": "^3.0.2",
     "fs-extra": "^9.0.0",
