inject api URL into the client.

--- a/misc/config.env
+++ b/misc/config.env
@@ -1,28 +1,28 @@
 ##
-# REST Configuration
+# REST
 ##
 API_HOST=localhost
 API_PORT=8888
 LOG_LEVEL=info
 
 ##
-# JWT Configuration
+# CLIENT
+##
+API_URL=http://localhost:8888
+
+##
+# JWT
 ##
 JWT_SECRET=MY_SECRET
 AUTH_ACCESS_EXPIRES=6 hours
 AUTH_REFRESH_EXPIRES=90 days
 
 ##
-# DB Configuration
+# DATABASE
 ##
 DB_HOST=/var/run/postgresql/
 DB_PORT=5432
 DB_USER=postgres
 DB_DATABASE=postgres
-# DB_PASS=MY_PASSWORD
-
-##
-# NextJS Configuration
-##
-API_URL=http://localhost:8888
+DB_PASS=
 
