coherent disptach of dotenv

--- a/misc/config.env
+++ b/misc/config.env
@@ -3,12 +3,12 @@
 ##
 API_HOST=localhost
 API_PORT=8888
-LOG_LEVEL=info
+LOG_LEVEL=debug
 
 ##
 # CLIENT
 ##
-API_URL=http://localhost:8888
+API_URL=http://localhost:3000/api
 
 ##
 # JWT
