--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build:client": "next build client",
+    "build:client": "env-cmd -f ./config.env next build client",
     "build:server": "npm-run-all build:loopback build:codegen",
     "build:loopback": "lb-tsc --outDir server/dist -p server",
     "build:codegen": "node ./server/dist/codegen",
@@ -23,6 +23,7 @@
     "bcrypt": "^4.0.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
