using connection url for postresql

--- a/misc/config.env
+++ b/misc/config.env
@@ -1,28 +1,17 @@
 ##
 # REST
 ##
+DATABASE_URL=postgresql://postgres@localhost:5432/postgres
+JWT_SECRET=MY_SECRET
+
 API_HOST=localhost
 API_PORT=8888
 LOG_LEVEL=debug
+AUTH_ACCESS_EXPIRES=6 hours
+AUTH_REFRESH_EXPIRES=90 days
 
 ##
 # CLIENT
 ##
 API_URL=http://localhost:3000/api
-
-##
-# JWT
-##
-JWT_SECRET=MY_SECRET
-AUTH_ACCESS_EXPIRES=6 hours
-AUTH_REFRESH_EXPIRES=90 days
-
-##
-# DATABASE
-##
-DB_HOST=/var/run/postgresql/
-DB_PORT=5432
-DB_USER=postgres
-DB_DATABASE=postgres
-DB_PASS=
 
