more compliant to heroku

--- a/misc/server.env
+++ b/misc/server.env
@@ -1,17 +1,18 @@
 ##
-# REST
+# REQUIRED
 ##
 DATABASE_URL=postgresql://postgres@localhost:5432/postgres
 JWT_SECRET=MY_SECRET
 
-API_HOST=localhost
-API_PORT=8888
+##
+# OPTIONAL
+##
+HOST=localhost
+PORT=8888
 LOG_LEVEL=debug
 AUTH_ACCESS_EXPIRES=6 hours
 AUTH_REFRESH_EXPIRES=90 days
-
-##
-# CLIENT
-##
-API_URL=http://localhost:3000/api
+# COOKIE_DOMAIN=
+# COOKIE_SECURE=
+# LOG_PATH=
 
