--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.6",
     "next": "^9.3.5",
     "pg": "^8.0.2",
     "react": "^16.13.1",
@@ -48,6 +50,7 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/superagent": "^4.1.7",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
     "ejs": "^3.0.2",
     "env-cmd": "^10.1.0",
     "fs-extra": "^9.0.0",
