--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.3",
+    "inversify": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
@@ -33,12 +34,14 @@
     "pg": "^8.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "reflect-metadata": "^0.1.13",
     "superagent": "^5.2.2",
     "typeorm": "^0.2.24",
     "winston": " ^3.2.1",
     "yaml": "^1.9.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.3.0",
     "@loopback/build": "^5.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
@@ -50,7 +53,6 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/superagent": "^4.1.7",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
     "ejs": "^3.0.2",
     "env-cmd": "^10.1.0",
     "fs-extra": "^9.0.0",
