--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "yaml": "^1.9.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@loopback/build": "^5.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
@@ -53,11 +54,13 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/superagent": "^4.1.7",
+    "bulma": "^0.8.2",
     "ejs": "^3.0.2",
     "env-cmd": "^10.1.0",
     "fs-extra": "^9.0.0",
     "json-schema-ref-parser": "^8.0.0",
     "klaw": "^3.0.0",
+    "node-sass": "^4.14.0",
     "npm-run-all": "^4.1.5"
   }
 }
