--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "formik": "^2.1.4",
     "http-proxy-middleware": "^1.0.3",
     "inversify": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
