Upgrade client code. Add I18N and Authentication

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,6 +13,9 @@
     "paths": {
       "@openapi/*": [
         "../../openapi/*"
+      ],
+      "@components/*": [
+        "./components/*"
       ]
     },
     "allowJs": true,
