--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
     "@loopback/rest-explorer": "^2.0.4",
     "bcrypt": "^4.0.1",
     "class-validator": "^0.12.2",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formik": "^2.1.4",
-    "http-proxy-middleware": "^1.0.3",
+    "heroku-ssl-redirect": "^0.0.4",
+    "http-proxy-middleware": "^1.0.4",
     "inquirer": "^7.1.0",
     "inversify": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
     "next": "^9.3.5",
+    "node-polyglot": "^2.4.0",
     "pg": "^8.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -56,6 +59,7 @@
     "@types/klaw": "^3.0.1",
     "@types/ms": "^0.7.31",
     "@types/node": "^13.13.2",
+    "@types/node-polyglot": "^0.4.34",
     "@types/react": "^16.9.34",
     "@types/superagent": "^4.1.7",
     "bulma": "^0.8.2",
