update .vscode folders

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -3,6 +3,9 @@
   "configurations": [
     {
       "type": "node",
+      "env": {
+        "NODE_ENV": "development"
+      },
       "request": "launch",
       "name": "Launch",
       "program": "${workspaceFolder}/index.js"
