add remember me in signin page.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@loopback/build": "^5.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/classnames": "^2.2.10",
+    "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/ejs": "^3.0.2",
     "@types/fs-extra": "^8.1.0",
